<resources>
    <string name="app_name">ornateadmin</string>
    <string name="login_text">Login</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="pgName">PG Name</string>
    <string name="pgAddress">PG Address</string>
    <string name="city">City</string>
    <string name="locality">Locality</string>
    <string name="conditions">PG terms and conditions</string>
</resources>
