<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context="in.evolve.ornateadmin.Activity.LoginActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar_material"/>


    <EditText
        android:layout_margin="20dp"
        android:hint="@string/hint_email"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email_input"/>

    <EditText
        android:layout_margin="20dp"
        android:inputType="numberPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_pass_input"/>

    <Button
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:id="@+id/login_btn"
        android:text="@string/login_text"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

</LinearLayout>
