<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.evolve.ornateadmin.Activity.AddNewPg">

    <include
        layout="@layout/toolbar_material"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pgName"
                android:id="@+id/pgName"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pgAddress"
                android:id="@+id/pgAddress"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:id="@+id/city"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locality"
                android:id="@+id/locality"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conditions"
                android:id="@+id/pg_conditions"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:gravity="center"
                android:text="Single Sharing price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="₹"
                android:padding="5dp"
                android:textSize="25sp"
                android:gravity="right|bottom"/>
            <EditText
                android:id="@+id/single_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:gravity="center"
                android:text="Double Sharing price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="₹"
                android:padding="5dp"
                android:textSize="25sp"
                android:gravity="right|bottom"/>
            <EditText

                android:id="@+id/double_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="18sp"
                android:gravity="center"
                android:text="Tripple Sharing price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:text="₹"
                android:padding="5dp"
                android:textSize="25sp"
                android:gravity="right|bottom"/>
            <EditText
                android:id="@+id/triple_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"/>
        </LinearLayout>

        <Button
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_information"
            android:text="submit"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/landing_round_button"/>
    </LinearLayout>

</LinearLayout>
